  lblAfter = After
  lblPicture = Picture
  msgLoginFailed=You could not be logged in
  msgLoginFailedDetails=Invalid credentials were provided. Please enter the correct username and password.
  lblItemsPerPage = Items per page:
  msgBusyUploadingImage
  msgErrorUploadingImage
  msgDragOrSelectImageFile
  msgBusyUploadingAttachment
  msgErrorUploadingAttachment
  msgDeleteAreYouSure
- Web; options for references - make array of correct size (saves time)
- Web; viewing of an item
- Web; child items / children
- Web; references

[Known Issues]
- Validation messages for svaing of items will always be in the language of the Data Crow configuration.


--------------------------------------------------------------------
Data Crow version 5.0  BETA IV                Released on 2024-11-20
--------------------------------------------------------------------

[Fixed]
- Database: added missing index for music tracks (performance fix).
- Port numbers were not remembered (login dialog).
- Quick view in client-server mode sometimes did not load the pictures fully.

[Changed]
- Larger pictures in the quick view description panel (max 500x400).
- Added image server address as a parameter (optional).

[Beta fixes]:
- Multi-reference fields were all broken.
- Online search: item was not correctly updated with the music tracks.
- Various issues with new pictures have been resolved.
- High CPU usage when the card view is shown.


--------------------------------------------------------------------
Data Crow version 5.0  BETA III               Released on 2024-11-07
--------------------------------------------------------------------
I am releasing this version as people had issues upgrading - image conversion was failing.
This releases addresses this issue (many thanks to Bert for sharing his data with me).

[Fixed]
- Database was not operating in logging mode - there was a fair chance information would be lost in case of a crash.