@@ -1,3 +1,4 @@
+lblCreatingNewItem = Creating new %1 
 lblPicture = Picture
 lblItemsPerPage = Items per page:
 lblImageServerAddress = Image Server Address
