@@ -1,3 +1,5 @@
+msgBusySavingItem=Busy saving your item
+msgBusyDeletingItem=Busy deleting the item
 msgDeleteAreYouSure=Are you sure you want to permanently delete this item?
 msgItemHasBeenSaved=The item has been saved successfully
 msgDragOrSelectImageFile=Choose a file or drag it here
