@@ -1,3 +1,6 @@
+msgBusySavingItem=Bezig met opslaan
+msgBusyDeletingItem=Bezig met het verwijderen van het item
+lblCreatingNewItem=%1 aanmaken
 msgDeleteAreYouSure=Weet u zeker dat u dit item wilt verwijderen?
 msgItemHasBeenSaved=Het item is opgeslagen
 msgErrorUploadingAttachment=Er is een fout opgetreden tijdens het uploaden van de bijlage
