@@ -42,6 +42,9 @@ Data Crow version 5.0  BETA V                 Released on 2024-xx-xx
   msgBusyUploadingAttachment
   msgErrorUploadingAttachment
   msgDeleteAreYouSure
+  msgBusyDeletingItem
+  lblCreatingNewItem
+  msgBusySavingItem
 - Web; options for references - make array of correct size (saves time)
 - Web; viewing of an item
 - Web; child items / children
